--- a/Akasztofa/Akasztofa.csproj
+++ b/Akasztofa/Akasztofa.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="szavak.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="szavak.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
